--- a/aLaFrancaise.html
+++ b/aLaFrancaise.html
@@ -10,24 +10,23 @@
 		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 		<!-- Icon -->
 		<script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-		<link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
-		<title>Menu - La palette du goût</title>
+		<link rel="icon" type="image/png" href="./asset/images/logo/ohmyfood@2x.svg" />
+		<title>Menu - A la française</title>
 	</head>
 	<body>
 		<header class="header">
-			<a class="back"  href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
-			<img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+			<a class="back" href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+			<img class="header__logo" src="./asset/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
 		</header>
 		<main>
 			<div class="img">
-				<img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
+				<img class="img__image" src="./asset/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
 			</div>
 			<div class="menu__container">
 				<div class="menu__header">
-					<h1 class="menu__title">La palette du goût</h1>
+					<h1 class="menu__title">A la française</h1>
 					<div class="heart">
 						<i class="far fa-heart"></i>
-						<i class="fa fa-heart"></i>
 					</div>
 				</div>
 				<!-- Menu -->
@@ -37,23 +36,25 @@
 						<h2 class="submenu__title">ENTREES</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Fricassée d'escargot</h3>
+								<h3>Tartare de poulpe acidulé</h3>
 								<p>
-									Au piment d'Espelette
+									Aux zestes d'orange
 								</p>
 							</div>
 							<div class="menu__price">
-								25€
+								<p>
+									25€
+								</p>
 							</div>
 							<div class="menu__check">
-								<i class="fas fa-check-circle" id="elem"></i>
+								<i class="fas fa-check-circle"></i>
 							</div>
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Foie gras de canard mi-cuit</h3>
+								<h3>Velouté de légumes d'antan</h3>
 								<p>
-									Et ses copeaux de truffe noire
+									Carotte, panais, topinambour
 								</p>
 							</div>
 							<div class="menu__price">
@@ -67,9 +68,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Oeuf au plat</h3>
+								<h3>Soupe à l'oignon</h3>
 								<p>
-									Assaisonné à la truffe sur lit de caviar
+									Revisitée
 								</p>
 							</div>
 							<div class="menu__price">
@@ -87,9 +88,9 @@
 						<h2 class="submenu__title">PLATS</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Filet de boeuf aux herbes</h3>
+								<h3>Coquilles Saint-Jacques</h3>
 								<p>
-									Accompagné de sa ribambelle de légumes
+									Accompagnées d'une purée de panais
 								</p>
 							</div>
 							<div class="menu__price">
@@ -103,9 +104,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Parmentier de queue de boeuf</h3>
+								<h3>Magret de canard</h3>
 								<p>
-									À la truffe noire sur sa purée de panais
+									Et parmentier de pommes de terre
 								</p>
 							</div>
 							<div class="menu__price">
@@ -119,9 +120,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Filet de turbot</h3>
+								<h3>Pigeonneau d’Ille-et-Vilaine</h3>
 								<p>
-									Aux agrumes
+									Sur son lit de gnocchis aux légumes
 								</p>
 							</div>
 							<div class="menu__price">
@@ -139,9 +140,9 @@
 						<h2 class="submenu__title">DESSERTS</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Paris-Brest</h3>
+								<h3>Pétales de violettes glacés</h3>
 								<p>
-									Revisité
+									Et purée de noisettes
 								</p>
 							</div>
 							<div class="menu__price">
@@ -155,9 +156,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Macaron au chocolat d'exception</h3>
+								<h3>Fondant au chocolat</h3>
 								<p>
-									Et glace à la vanille de Madagascar
+									Revisité
 								</p>
 							</div>
 							<div class="menu__price">
@@ -171,9 +172,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Mousse au chocolat</h3>
+								<h3>Millefeuille croustillant</h3>
 								<p>
-									Au piment d'Espelette et à la truffe noire
+									Myrtilles et pâte d’amande
 								</p>
 							</div>
 							<div class="menu__price">
