--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 		<!-- Icon -->
 		<script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-		<link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
+		<link rel="icon" type="image/png" href="./asset/images/logo/ohmyfood@2x.svg" />
 		<link rel="stylesheet" href="./public/css/style.css">
 	</head>
 	<body>
@@ -28,7 +28,7 @@
 		</div>
 		<!-- Header -->
 		<header>
-			<img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+			<img class="header__logo" src="./asset/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
 		</header>
 		<main>
 			<div class="local">
@@ -37,9 +37,9 @@
 			</div>
 			<!-- Reservation -->
 			<section class="reser">
-				<h1 class="reser__title">Réservez le menu quivous convient</h1>
+				<h1 class="reser__title">Réservez le menu qui vous convient</h1>
 				<p class="reser__subtitle">
-					Découvrez des restaurants d'exception,sélectionnés par nos soins.
+					Découvrez des restaurants d'exception, sélectionnés par nos soins.
 				</p>
 				<a class="pink__btn" href="#restaurants">Explorez nos restaurants</a>
 			</section>
@@ -60,8 +60,8 @@
 					<h2 class="restaurants__title">Restaurants</h2>
 					<div class="cards">
 						<div class="card">
-							<a href="./palette-du-gout.html">
-								<img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt class="card__img">
+							<a href="./paletteDuGout.html">
+								<img src="./asset/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt class="card__img">
 								<span class="card__btn">Nouveau</span>
 								<div class="card__content">
 									<h3 class="card__title">La palette du goût</h3>
@@ -70,15 +70,14 @@
 									</p>
 									<div class="heart">
 										<i class="far fa-heart"></i>
-										<i class="fa fa-heart"></i>
 									</div>
 								</div>
 							</a>
 						</div>
 						<div class="card">
-							<a href="./note-enchantée.html">
+							<a href="./noteEnchantee.html">
 								<span class="card__btn">Nouveau</span>
-								<img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt class="card__img">
+								<img src="./asset/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt class="card__img">
 								<div class="card__content">
 									<h3 class="card__title">La note enchantée</h3>
 									<p class="card__loc">
@@ -86,14 +85,13 @@
 									</p>
 									<div class="heart">
 										<i class="far fa-heart"></i>
-										<i class="fa fa-heart"></i>
 									</div>
 								</div>
 							</a>
 						</div>
 						<div class="card">
-							<a href="./a-la-française.html">
-								<img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt class="card__img">
+							<a href="./aLaFrancaise.html">
+								<img src="./asset/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt class="card__img">
 								<div class="card__content">
 									<h3 class="card__title">A la française</h3>
 									<p class="card__loc">
@@ -101,14 +99,13 @@
 									</p>
 									<div class="heart">
 										<i class="far fa-heart"></i>
-										<i class="fa fa-heart"></i>
 									</div>
 								</div>
 							</a>
 						</div>
 						<div class="card">
-							<a href="./delice-des-sens.html">
-								<img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt class="card__img">
+							<a href="./deliceDesSens.html">
+								<img src="./asset/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt class="card__img">
 								<div class="card__content">
 									<h3 class="card__title">Le Délice des sens</h3>
 									<p class="card__loc">
@@ -116,7 +113,6 @@
 									</p>
 									<div class="heart">
 										<i class="far fa-heart"></i>
-										<i class="fa fa-heart"></i>
 									</div>
 								</div>
 							</a>
