--- a/noteEnchantee.html
+++ b/noteEnchantee.html
@@ -10,24 +10,23 @@
 		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 		<!-- Icon -->
 		<script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-		<link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
+		<link rel="icon" type="image/png" href="./asset/images/logo/ohmyfood@2x.svg" />
 		<title>Menu - A la française</title>
 	</head>
 	<body>
 		<header class="header">
-			<a class="back" href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
-			<img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+			<a class="back"  href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+			<img class="header__logo" src="./asset/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
 		</header>
 		<main>
 			<div class="img">
-				<img class="img__image" src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
+				<img class="img__image" src="./asset/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
 			</div>
 			<div class="menu__container">
 				<div class="menu__header">
-					<h1 class="menu__title">A la française</h1>
+					<h1 class="menu__title">Le délice des sens</h1>
 					<div class="heart">
 						<i class="far fa-heart"></i>
-						<i class="fa fa-heart"></i>
 					</div>
 				</div>
 				<!-- Menu -->
@@ -37,9 +36,9 @@
 						<h2 class="submenu__title">ENTREES</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Tartare de poulpe acidulé</h3>
+								<h3>Ravioles de foie gras</h3>
 								<p>
-									Aux zestes d'orange
+									Accompagnés de leur crème à la truffe
 								</p>
 							</div>
 							<div class="menu__price">
@@ -53,9 +52,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Velouté de légumes d'antan</h3>
+								<h3>Caviar osciètre</h3>
 								<p>
-									Carotte, panais, topinambour
+									Sur blini à la farine de blé noir
 								</p>
 							</div>
 							<div class="menu__price">
@@ -69,14 +68,30 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Soupe à l'oignon</h3>
+								<h3>Homard et espuma de potiron</h3>
 								<p>
-									Revisitée
+									Mariné aux zestes d'orange
 								</p>
 							</div>
 							<div class="menu__price">
 								<p>
 									20€
+								</p>
+							</div>
+							<div class="menu__check">
+								<i class="fas fa-check-circle"></i>
+							</div>
+						</div>
+						<div class="menu__card">
+							<div class="menu__name">
+								<h3>Foie gras de canard cuit entier</h3>
+								<p>
+									Confiture de figue et pain toasté
+								</p>
+							</div>
+							<div class="menu__price">
+								<p>
+									35€
 								</p>
 							</div>
 							<div class="menu__check">
@@ -89,9 +104,9 @@
 						<h2 class="submenu__title">PLATS</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Coquilles Saint-Jacques</h3>
+								<h3>Noix de coquilles Saint-Jacques</h3>
 								<p>
-									Accompagnées d'une purée de panais
+									Sur lit de purée de céleri-rave
 								</p>
 							</div>
 							<div class="menu__price">
@@ -105,9 +120,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Magret de canard</h3>
+								<h3>Langoustine poêlée</h3>
 								<p>
-									Et parmentier de pommes de terre
+									Purée de patate douce
 								</p>
 							</div>
 							<div class="menu__price">
@@ -121,9 +136,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Pigeonneau d’Ille-et-Vilaine</h3>
+								<h3>Mijoté de queue de boeuf</h3>
 								<p>
-									Sur son lit de gnocchis aux légumes
+									Et riz sauvage aux zestes de citron
 								</p>
 							</div>
 							<div class="menu__price">
@@ -141,9 +156,9 @@
 						<h2 class="submenu__title">DESSERTS</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Pétales de violettes glacés</h3>
+								<h3>Macaron noisette et chocolat</h3>
 								<p>
-									Et purée de noisettes
+									Glace au caramel brun et sel de Guérande
 								</p>
 							</div>
 							<div class="menu__price">
@@ -157,9 +172,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Fondant au chocolat</h3>
+								<h3>Baba au rhum revisité</h3>
 								<p>
-									Revisité
+									Avec son coulis de citron
 								</p>
 							</div>
 							<div class="menu__price">
@@ -173,9 +188,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Millefeuille croustillant</h3>
+								<h3>Tarte au citron meringuée</h3>
 								<p>
-									Myrtilles et pâte d’amande
+									Déstructurée
 								</p>
 							</div>
 							<div class="menu__price">
