--- a/paletteDuGout.html
+++ b/paletteDuGout.html
@@ -10,24 +10,23 @@
 		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 		<!-- Icon -->
 		<script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-		<link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
-		<title>Menu - A la française</title>
+		<link rel="icon" type="image/png" href="./asset/images/logo/ohmyfood@2x.svg" />
+		<title>Menu - La palette du goût</title>
 	</head>
 	<body>
 		<header class="header">
 			<a class="back"  href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
-			<img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+			<img class="header__logo" src="./asset/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
 		</header>
 		<main>
 			<div class="img">
-				<img class="img__image" src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
+				<img class="img__image" src="./asset/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
 			</div>
 			<div class="menu__container">
 				<div class="menu__header">
-					<h1 class="menu__title">Le délice des sens</h1>
+					<h1 class="menu__title">La palette du goût</h1>
 					<div class="heart">
 						<i class="far fa-heart"></i>
-						<i class="fa fa-heart"></i>
 					</div>
 				</div>
 				<!-- Menu -->
@@ -37,25 +36,23 @@
 						<h2 class="submenu__title">ENTREES</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Ravioles de foie gras</h3>
+								<h3>Fricassée d'escargot</h3>
 								<p>
-									Accompagnés de leur crème à la truffe
+									Au piment d'Espelette
 								</p>
 							</div>
 							<div class="menu__price">
-								<p>
-									25€
-								</p>
+								25€
 							</div>
 							<div class="menu__check">
-								<i class="fas fa-check-circle"></i>
+								<i class="fas fa-check-circle" id="elem"></i>
 							</div>
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Caviar osciètre</h3>
+								<h3>Foie gras de canard mi-cuit</h3>
 								<p>
-									Sur blini à la farine de blé noir
+									Et ses copeaux de truffe noire
 								</p>
 							</div>
 							<div class="menu__price">
@@ -69,30 +66,14 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Homard et espuma de potiron</h3>
+								<h3>Oeuf au plat</h3>
 								<p>
-									Mariné aux zestes d'orange
+									Assaisonné à la truffe sur lit de caviar
 								</p>
 							</div>
 							<div class="menu__price">
 								<p>
 									20€
-								</p>
-							</div>
-							<div class="menu__check">
-								<i class="fas fa-check-circle"></i>
-							</div>
-						</div>
-						<div class="menu__card">
-							<div class="menu__name">
-								<h3>Foie gras de canard cuit entier</h3>
-								<p>
-									Confiture de figue et pain toasté
-								</p>
-							</div>
-							<div class="menu__price">
-								<p>
-									35€
 								</p>
 							</div>
 							<div class="menu__check">
@@ -105,9 +86,9 @@
 						<h2 class="submenu__title">PLATS</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Noix de coquilles Saint-Jacques</h3>
+								<h3>Filet de boeuf aux herbes</h3>
 								<p>
-									Sur lit de purée de céleri-rave
+									Accompagné de sa ribambelle de légumes
 								</p>
 							</div>
 							<div class="menu__price">
@@ -121,9 +102,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Langoustine poêlée</h3>
+								<h3>Parmentier de queue de boeuf</h3>
 								<p>
-									Purée de patate douce
+									À la truffe noire sur sa purée de panais
 								</p>
 							</div>
 							<div class="menu__price">
@@ -137,9 +118,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Mijoté de queue de boeuf</h3>
+								<h3>Filet de turbot</h3>
 								<p>
-									Et riz sauvage aux zestes de citron
+									Aux agrumes
 								</p>
 							</div>
 							<div class="menu__price">
@@ -157,9 +138,9 @@
 						<h2 class="submenu__title">DESSERTS</h2>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Macaron noisette et chocolat</h3>
+								<h3>Paris-Brest</h3>
 								<p>
-									Glace au caramel brun et sel de Guérande
+									Revisité
 								</p>
 							</div>
 							<div class="menu__price">
@@ -173,9 +154,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Baba au rhum revisité</h3>
+								<h3>Macaron au chocolat d'exception</h3>
 								<p>
-									Avec son coulis de citron
+									Et glace à la vanille de Madagascar
 								</p>
 							</div>
 							<div class="menu__price">
@@ -189,9 +170,9 @@
 						</div>
 						<div class="menu__card">
 							<div class="menu__name">
-								<h3>Tarte au citron meringuée</h3>
+								<h3>Mousse au chocolat</h3>
 								<p>
-									Déstructurée
+									Au piment d'Espelette et à la truffe noire
 								</p>
 							</div>
 							<div class="menu__price">
